# MiniMastodon.py

./: .gitignore  pyproject.toml
minimastodon_py/: auth.py
tests/: minimastodon_py.py  test_minimastodon_py.py
